# CodingTrain-C

./: .editorconfig  .gitignore  README.adoc  meson.build
Documentation/: .gitignore  Doxyfile  Makefile
Documentation/Sources/: challenge001_starfield.rst  challenge003_snake.rst  conf.py  index.rst
Headers/Helper/: Math.h  Random.h
Sources/: meson.build
Sources/Challenge001 Starfield/: Star.h  Starfield.c  meson.build
Sources/Challenge001Starfield/: Star.c  Star.h  meson.build
Sources/Challenge003 Snake/: Snake.h  SnakeGame.c
Sources/Challenge003Snake/: Snake.c  Snake.h  meson.build
Sources/Challenge004 Purple Rain/: Rain.c
Sources/Challenge004PurpleRain/: Drop.c  Drop.h  meson.build
Sources/Challenge149TicTacToe/: Tic Tac Toe.c  meson.build
Sources/Helper Library/: Math.c  Random.c  meson.build
subprojects/: libsodium.wrap
